data/derived/fa15/progs/unify/prog1809.ml.out
Characters 21-22:
  let _ = listReverse [1; 2; 3; 4];;
                       ^
Error: This expression has type int but an expression was expected of type
         'a list
